# nice-plots

./: .gitignore  .pre-commit-config.yaml  HISTORY.rst  README.rst  environment.yml  pyproject.toml  setup.py
examples/: example_codebook.csv  example_config.yml  example_data.csv  playground.ipynb
examples/barplots/: codebook_barplots.csv  config_barplots.yml
examples/histograms/: codebook_histograms.csv  config_histograms.yml
examples/lineplots/: codebook_lineplots.csv  config_lineplots.yml
examples/test/: config_test.yml
niceplots/: __init__.py  barplot.py  gui.py  histogram.py  lineplot.py  main.py  main_gui.py  niceplot_API.py  objects.py  parser.py  plotting.py  process.py  timebox.py  timeline.py  utils.py
niceplots/deprecated/: gui.py  main_gui.py  niceplot_API.py  tools.py
niceplots/plotting/: barplot.py  histogram.py  lineplot.py  timeline.py
niceplots/utils/: codebook.py  config.py  data.py  nice_logger.py  plotting_utils.py  test_utils.py  utils.py
tests/: conftest.py  test_barplots.py  test_codebook.py  test_config.py  test_data.py  test_histograms.py  test_lineplots.py  test_main.py  test_parser.py  test_process.py
